Navigation, Behaviors, Effects, Converters, Navtive (windows) control

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ RickyMortySLN/RickyMorty/RickyMorty.iOS/obj/
 RickyMortySLN/RickyMorty/RickyMorty.UWP/bin/
 RickyMortySLN/RickyMorty/RickyMorty.UWP/obj/
 RickyMortySLN/RickyMorty/RickyMorty/bin/
+RickyMortySLN/RickyMorty/RickyMorty.iOS/bin/
+RickyMortySLN/RickyMorty/RickyMorty.Android/bin/
