--- a/RickyMortySLN/RickyMorty/RickyMorty/RickyMorty.csproj
+++ b/RickyMortySLN/RickyMorty/RickyMorty/RickyMorty.csproj
@@ -21,4 +21,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\Detail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
